--- a/home.html
+++ b/home.html
@@ -48,11 +48,11 @@
         <br>
         <p>
             <h4>
-                Here, We will help you remember your goals and stay organised
+               We will accompony you to acheive your goals and stay upto date
             </h4>
             <br>
             <h6>
-                Click on To-Do tab in navbar to check your progress
+                Click on the  To-Do to check your progress
             </h6>
         </p>
     </div>
